# md5_py_implementation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: operations.md  tech_spec.md
md5_tui/: __init__.py  __main__.py  app.py
md5_tui/domain/: __init__.py  history_service.py  md5_service.py  models.py
md5_tui/infrastructure/: __init__.py  clock.py  file_reader.py
md5_tui/ui/: __init__.py  controllers.py  screens.py  widgets.py
tests/domain/: test_history_service.py  test_md5_service.py
tests/infrastructure/: test_file_reader.py
tests/ui/: test_controllers.py
